@@ -333,6 +333,7 @@ Release 0.20.0 - Unreleased
    HBASE-1793  [Regression] HTable.get/getRow with a ts is broken
    HBASE-1698  Review documentation for o.a.h.h.mapreduce
    HBASE-1798  [Regression] Unable to delete a row in the future
+   HBASE-1780  HTable.flushCommits clears write buffer in finally clause
 
   IMPROVEMENTS
    HBASE-1089  Add count of regions on filesystem to master UI; add percentage
